# reservoir-index

./: 0art0.CategoryTheory.html  AdrienChampion.experimentalean4.html  Anderssorby.LeanPlay.html  Appelcider.Graphs-and-Groups.html  Augustindou.natural2lean-lean-project-template.html  Augustindou.natural2lean.html  AwdeDarkar.my-mathlib.html  ChrisHughes24.lean4stuff.html  FWuermse.lean-postgres.html  FWuermse.lean4-sql-utils.html  Ferinko.LeanAStar.html  Ferinko.LeanSha.html  GregorKikelj.Lean4AdventOfCode.html  IPDSnelting.tba-2022.html  Izzimach.lean-glfw.html  Izzimach.qinglong.html  JLimperg.aesop.html  JamesGallicchio.LeanColls.html  Julian.lean.nvim.html  Kha.do-supplement.html  Kha.lean4-nightly.html  Kha.nale.html  Mateiadrielrafael.lean-sandbox.html  NicolasRouquette.YatimaGraphLib.html  NicolasRouquette.dimensional-calculus.lean4.html  Nolrai.WildGeo.html  Nolrai.bindings.html  Nolrai.lambda.html  Nolrai.ordinal.html  Nolrai.pharoh.html  PatrickMassot.verbose-lean4.html  PeterKementzey.graph-library-for-lean4.html  PolyB.LeanPythonRaw.html  README.md  RosieBaish.first_order_leaning.html  RosieBaish.lean-sep-logic.html  SReichelt.universe-abstractions.html  SimonHauguel.Lec.html  SnO2WMaN.lean-first-practice.html  UlisseMini.ladoneright.html  (+166 more)
.github/workflows/: generate.yml  prospect.yml
builds/: index.html
git/0art0/CategoryTheory/: Main.lean  lakefile.lean
git/Anderssorby/LeanPlay/: .gitignore  README.md  flake.nix  (+2 more)
git/lecopivo/leanPluginTest/: CMakeLists.txt  Package.lean  lakefile.lean  main.cpp  main2.cpp  plugin.cpp  plugin2.cpp  readme.org
(+12218 files in other folders)
